# advent-of-code

./: .gitignore  README.md  aoc.el
2019/: aoc-haskell.cabal  template_create.sh
2022/: LICENSE
2023/: .ocamlformat
2023/aoc_ocaml/: dune-project
2023/aoc_ocaml/lib/: Day1.ml  Day10.ml  Day11.ml  Day12.ml  Day13.ml  Day14.ml  Day15.ml  Day2.ml  Day3.ml  Day4.ml  Day5.ml  Day6.ml  Day7.ml  Day8.ml  Day9.ml  Util.ml  dune
2023/aoc_ocaml/lib/data/: day2
2023/aoc_ocaml/lib/day1/: dune
2023/aoc_ocaml/lib/day10/: day10.ml
2023/aoc_ocaml/lib/day11/: dune
2023/aoc_ocaml/lib/day12/: dune
2023/aoc_ocaml/lib/day13/: day13.ml  dune
2023/aoc_ocaml/lib/day15/: day15.ml  dune
2023/aoc_ocaml/lib/day16/: day16.ml  dune
2023/aoc_ocaml/lib/day17/: dune
2023/aoc_ocaml/lib/day18/: day18.ml
2023/aoc_ocaml/lib/day19/: day19.ml
2023/aoc_ocaml/lib/day2/: day2.ml
2023/aoc_ocaml/lib/day20/: dune
2023/aoc_ocaml/lib/day22/: day22.ml  dune
2023/aoc_ocaml/lib/day23/: day23.ml  dune
2023/aoc_ocaml/lib/day3/: day3.ml  dune
2023/aoc_ocaml/lib/day4/: day4.ml  dune
2023/aoc_ocaml/lib/day6/: dune
2023/aoc_ocaml/lib/day7/: day7.ml  dune
2023/aoc_ocaml/lib/day8/: dune
2023/aoc_ocaml/lib/day9/: dune
2024/: .gitignore  aoc.el  day1.el  day10.el  day11.el  day12.el  day13.el  day14.el  day15.el  day16.el  day17.el  day18.el  day19.el  day2.el  day20.el  day21.el  day22.el  day23.el  day24.el  day25.el  day3.el  day4.el  day5.el  day6.el  day7.el  day8.el  day9.el
2025/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  aoc.py  setup.cfg  (+1 more)
(+93 files in other folders)
